...
    }
    
    //MARK: View Lifecycle Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Report Generator"
        view.accessibilityIdentifier = "__page__ReportGeneratorController"
        
        if let items = selectedModules {
            firstDataManipulator = CollectionViewDataManipulator<Item, ReportGeneratorCollectionViewCell>(secions: items.map { module in
                Section<Item>(title: module.feature, items: ListViewModel.reportModels(module: module), isDragEnabled: false)
            })
        }
...
