...

class ListViewController: UIViewController {
    @IBOutlet weak var collectionView1: UICollectionView! {
        didSet {
            collectionView1.reloadData()
            collectionView1.backgroundColor = UIColor.black.withAlphaComponent(0.015)
            collectionView1.accessibilityIdentifier = "__page__ListViewController"
        }
    }
    
    @IBOutlet weak var contentHeight: NSLayoutConstraint! {
        didSet {
            //contentHeight.priority = UILayoutPriority.defaultHigh
...
