...
                                <rect key="frame" x="306" y="501" width="53" height="42"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="53" id="pLH-oF-M2E"/>
                                    <constraint firstAttribute="height" constant="42" id="yzh-TY-20L"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="doneButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="didTapOnButton:" destination="okS-0I-c9k" eventType="touchUpInside" id="MD9-Z7-fj4"/>
                                </connections>
                            </button>
                        </subviews>
...
